--- a/Damps/AndroidManifest.xml
+++ b/Damps/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.damps.fantasy"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="0.1" >
 
     <uses-sdk
-        android:minSdkVersion="7"
-        android:debuggable="true" />
+        android:debuggable="true"
+        android:minSdkVersion="7" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -16,8 +16,8 @@
         android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity
             android:name=".HomeActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation" >
+            android:configChanges="orientation"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
