--- a/Damps/AndroidManifest.xml
+++ b/Damps/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.damps.fantasy"
-    android:versionCode="1"
-    android:versionName="0.1" >
+    android:versionCode="2"
+    android:versionName="0.2" >
 
     <uses-sdk
-        android:minSdkVersion="7"
-        android:debuggable="true" />
+        android:debuggable="true"
+        android:minSdkVersion="7" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity
-            android:name=".HomeActivity"
+            android:name=".activities.HomeActivity"
             android:configChanges="orientation"
             android:label="@string/app_name" >
             <intent-filter>
@@ -24,23 +24,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NewsActivity" />
-        <activity android:name=".RosterActivity" />
-        <activity android:name=".ScoresActivity" />
-        <activity android:name=".StandingsActivity" />
-        <activity android:name=".StartersActivity" />
-        <activity android:name=".TeamsActivity" />
-        <activity android:name=".HeadlinesActivity" />
-        <activity android:name=".OptionsActivity" />
-        <activity android:name=".ForumActivity" />
-        <activity android:name=".ThreadActivity" />
-        <activity android:name=".NewThreadActivity" />
-        <activity android:name=".NewPostActivity" />
-        <activity android:name=".MessagesActivity" />
-        <activity android:name=".InboxActivity" />
-        <activity android:name=".OutboxActivity" />
-        <activity android:name=".NewMessageActivity" />
-        <activity android:name=".MessageActivity" />
+        <activity android:name=".activities.NewsActivity" />
+        <activity android:name=".activities.RosterActivity" />
+        <activity android:name=".activities.ScoresActivity" />
+        <activity android:name=".activities.StandingsActivity" />
+        <activity android:name=".activities.StartersActivity" />
+        <activity android:name=".activities.TeamsActivity" />
+        <activity android:name=".activities.HeadlinesActivity" />
+        <activity android:name=".activities.OptionsActivity" />
+        <activity android:name=".activities.ForumActivity" />
+        <activity android:name=".activities.ThreadActivity" />
+        <activity android:name=".activities.NewThreadActivity" />
+        <activity android:name=".activities.NewPostActivity" />
+        <activity android:name=".activities.MessagesActivity" />
+        <activity android:name=".activities.InboxActivity" />
+        <activity android:name=".activities.OutboxActivity" />
+        <activity android:name=".activities.NewMessageActivity" />
+        <activity android:name=".activities.MessageActivity" />
     </application>
 
 </manifest>
