--- a/Damps/AndroidManifest.xml
+++ b/Damps/AndroidManifest.xml
@@ -5,8 +5,8 @@
     android:versionName="0.3" >
 
     <uses-sdk
-        android:debuggable="true"
-        android:minSdkVersion="8" />
+        android:minSdkVersion="8"
+        android:targetSdkVersion="15" />
 
     <permission
         android:name="de.damps.fantasy.permission.C2D_MESSAGE"
