--- a/Damps/AndroidManifest.xml
+++ b/Damps/AndroidManifest.xml
@@ -62,12 +62,15 @@
         <activity android:name=".activities.OptionsActivity" />
         <activity android:name=".activities.ForumActivity" />
         <activity android:name=".activities.ThreadActivity" />
-        <activity android:name=".activities.NewThreadActivity" />
-        <activity android:name=".activities.NewPostActivity" />
+        <activity android:name=".activities.NewThreadActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".activities.NewPostActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".activities.MessagesActivity" />
         <activity android:name=".activities.InboxActivity" />
         <activity android:name=".activities.OutboxActivity" />
-        <activity android:name=".activities.NewMessageActivity" />
+        <activity android:name=".activities.NewMessageActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".activities.MessageActivity" />
         <activity android:name=".activities.TeamManagementActivity" />
         <activity android:name=".activities.ReleaseActivity" />
