--- a/Damps/AndroidManifest.xml
+++ b/Damps/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.damps.fantasy"
-    android:versionCode="5"
-    android:versionName="0.5" >
+    android:versionCode="00050"
+    android:versionName="0.5.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+        android:minSdkVersion="7"
+        android:targetSdkVersion="11" />
 
     <permission
         android:name="de.damps.fantasy.permission.C2D_MESSAGE"
@@ -27,7 +27,6 @@
         android:icon="@drawable/ff"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
-        
         <receiver
             android:name="com.google.android.gcm.GCMBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
@@ -38,7 +37,7 @@
                 <category android:name="de.damps.fantasy" />
             </intent-filter>
         </receiver>
-        
+
         <service android:name=".GCMIntentService" />
 
         <activity
@@ -51,7 +50,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity android:name=".activities.NewsActivity" />
         <activity android:name=".activities.RosterActivity" />
         <activity android:name=".activities.ScoresActivity" />
@@ -62,18 +60,30 @@
         <activity android:name=".activities.OptionsActivity" />
         <activity android:name=".activities.ForumActivity" />
         <activity android:name=".activities.ThreadActivity" />
-        <activity android:name=".activities.NewThreadActivity"
+        <activity
+            android:name=".activities.NewThreadActivity"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".activities.NewPostActivity"
+        <activity
+            android:name=".activities.NewPostActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".activities.MessagesActivity" />
         <activity android:name=".activities.InboxActivity" />
         <activity android:name=".activities.OutboxActivity" />
-        <activity android:name=".activities.NewMessageActivity"
+        <activity
+            android:name=".activities.NewMessageActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".activities.MessageActivity" />
         <activity android:name=".activities.ReleaseActivity" />
         <activity android:name=".activities.SetStartersActivity" />
+        <activity android:name=".activities.SignActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
     </application>
 
 </manifest>
