bugs post tradelog

--- a/Damps/AndroidManifest.xml
+++ b/Damps/AndroidManifest.xml
@@ -84,6 +84,7 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <activity android:name=".activities.TradelogActivity" />
     </application>
 
 </manifest>
