--- a/Damps/AndroidManifest.xml
+++ b/Damps/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.damps.fantasy"
-    android:versionCode="00050"
-    android:versionName="0.5.0" >
+    android:versionCode="00060"
+    android:versionName="0.6.0" >
 
     <uses-sdk
         android:minSdkVersion="7"
@@ -75,7 +75,9 @@
         <activity android:name=".activities.MessageActivity" />
         <activity android:name=".activities.ReleaseActivity" />
         <activity android:name=".activities.SetStartersActivity" />
-        <activity android:name=".activities.SignActivity" >
+        <activity
+            android:name=".activities.SignActivity"
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
