--- a/Damps/AndroidManifest.xml
+++ b/Damps/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <!-- GCM connects to Google Services. -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- GCM requires a Google account. -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <!-- Keeps the processor from sleeping when a message is received. -->
@@ -77,8 +78,8 @@
         <activity android:name=".activities.SetStartersActivity" />
         <activity
             android:name=".activities.SignActivity"
-            android:launchMode="singleTop"
-            android:exported="false" >
+            android:exported="false"
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
@@ -88,6 +89,7 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity android:name=".activities.TradelogActivity" />
+
     </application>
 
 </manifest>
